classDiagram
    direction TB

%% ══════════════════════════════════════════
%% Venue domain:
%% Updated Venue design for current code
%% ══════════════════════════════════════════

    namespace Domain_Venue {

        class Venue
        class VenueId
        class VenueZone

    }

%% ══════════════════════════════════════════
%% AGGREGATE Venue:
%% Company-owned reusable venue definition.
%% Contains venue and exposes aggregate-level capacity information.
%% ══════════════════════════════════════════

    class Venue:::aggregate {
        <<Aggregate Root>>
        - VenueId venueId
        - CompanyId companyId
        - String venueName
        - List~VenueZone~ zones
        + addZone(VenueZone) void
        + removeZone(ZoneId) void
        + getZone(ZoneId) VenueZone
        + getTotalCapacity() int
        + getTotalAvailableSeats() int
        + getTotalReservedSeats() int
        + getTotalSoldSeats() int
    }

%% ══════════════════════════════════════════
%% VALUE OBJECTS AND ENTITIES
%% ══════════════════════════════════════════

    class VenueId:::idValueObject {
        <<ID - Value Object>>
    }

    class VenueZone:::entity {
        <<Entity>>
        - ZoneId zoneId
        - String zoneName
        - ZoneType zoneType
        - Money pricePerTicket
        - List~Seat~ seats
        - int totalCapacity
        + reserveSeat(SeatId) void
        + releaseSeat(SeatId) void
        + markSeatSold(SeatId) void
    }

%% ══════════════════════════════════════════
%% CORE DOMAIN RELATIONS
%% ══════════════════════════════════════════

    Venue "1" *-- "1" VenueId
    Venue "1" *-- "0..n" VenueZone

%% ══════════════════════════════════════════
%% EXTERNAL DOMAIN REFERENCES
%% ══════════════════════════════════════════

    namespace Domain_Company {
        class CompanyId:::external
    }

    namespace Domain_Zone {
        class ZoneId:::external
        class Seat:::external
        class SeatId:::external
        class ZoneType:::enum
        class SeatStatus:::enum
    }

    namespace Domain_Shared {
        class Money:::external
    }

%% External relations:
    Venue --> CompanyId : owner company id

    VenueZone --> ZoneId : zone id
    VenueZone --> ZoneType : zone type
    VenueZone --> Seat : seats
    VenueZone --> SeatId : seat id
    VenueZone --> Money : ticket price

%% ══════════════════════════════════════════
%% PERSISTENCE BOUNDARY / REPOSITORY ADAPTERS
%% Included to show how Venue aggregates are stored and loaded.
%% ══════════════════════════════════════════

    namespace Infrastructure_Persistence {
        class VenueRepository:::repository
    }

    class VenueRepository {
        <<Repository>>
        - ConcurrentHashMap~VenueId, Venue~ venues
        - ConcurrentHashMap~CompanyId, List~VenueId~~ companyVenues
    }

    VenueRepository ..> Venue : manages persistence

%% ══════════════════════════════════════════
%% STYLING
%% ══════════════════════════════════════════

    classDef aggregate fill:#ffe8cc,stroke:#d9480f,stroke-width:2px,color:#000
    classDef entity fill:#ebfbee,stroke:#2f9e44,stroke-width:1px,color:#000
    classDef valueObject fill:#e7f5ff,stroke:#1c7ed6,stroke-width:1px,color:#000
    classDef idValueObject fill:#fff0f6,stroke:#c2255c,stroke-width:1px,color:#000
    classDef enum fill:#f3f0ff,stroke:#6741d9,stroke-width:1px,color:#000
    classDef external fill:#f1f3f5,stroke:#495057,stroke-width:1px,color:#000
    classDef repository fill:#e6fcf5,stroke:#0ca678,stroke-width:1px,color:#000
    classDef legend fill:#ffffff,stroke:#212529,stroke-width:1px,color:#000